force-app/main/default/objects/DeclinedShipment__c/DeclinedShipment__c.object-meta.xml
<CustomObject>
    <label>Declined Shipment</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>DeclinedShipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declined Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>