force-app/main/default/objects/DeclinedShipment__c/fields/FulfillmentOrderId__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>DeclinedShipments</relationshipLabel>
    <relationshipName>DeclinedShipments</relationshipName>
    <type>Lookup</type>
</CustomField>