force-app/main/default/objects/DeclinedShipment__c/fields/OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>DeclinedShipments</relationshipLabel>
    <relationshipName>DeclinedShipments</relationshipName>
    <type>Lookup</type>
</CustomField>